@@ -1,3 +1,4 @@
+11/26/13 add 'Molecule count' view
 11/26/13 add color-coding to 'H3O+/OH- ratio' label
 11/26/13 fix colors, sample using sRBG
 11/26/13 adjust colors of atoms
